Use Virtual Thread instead of Thread